--- a/frappe/social/doctype/energy_point_settings/energy_point_settings.json
+++ b/frappe/social/doctype/energy_point_settings/energy_point_settings.json
@@ -54,6 +54,39 @@
    "bold": 0,
    "collapsible": 0,
    "columns": 0,
+   "depends_on": "enabled",
+   "fetch_if_empty": 0,
+   "fieldname": "section_break_2",
+   "fieldtype": "Section Break",
+   "hidden": 0,
+   "ignore_user_permissions": 0,
+   "ignore_xss_filter": 0,
+   "in_filter": 0,
+   "in_global_search": 0,
+   "in_list_view": 0,
+   "in_standard_filter": 0,
+   "length": 0,
+   "no_copy": 0,
+   "permlevel": 0,
+   "precision": "",
+   "print_hide": 0,
+   "print_hide_if_no_value": 0,
+   "read_only": 0,
+   "remember_last_selected_value": 0,
+   "report_hide": 0,
+   "reqd": 0,
+   "search_index": 0,
+   "set_only_once": 0,
+   "translatable": 0,
+   "unique": 0
+  },
+  {
+   "allow_bulk_edit": 0,
+   "allow_in_quick_entry": 0,
+   "allow_on_submit": 0,
+   "bold": 0,
+   "collapsible": 0,
+   "columns": 0,
    "fetch_if_empty": 0,
    "fieldname": "review_levels",
    "fieldtype": "Table",
@@ -151,16 +184,14 @@
   }
  ],
  "has_web_view": 0,
- "hide_heading": 0,
  "hide_toolbar": 0,
  "idx": 0,
- "image_view": 0,
  "in_create": 0,
  "is_submittable": 0,
  "issingle": 1,
  "istable": 0,
  "max_attachments": 0,
- "modified": "2019-03-21 15:47:30.230995",
+ "modified": "2019-03-26 19:10:14.087840",
  "modified_by": "Administrator",
  "module": "Social",
  "name": "Energy Point Settings",
@@ -189,7 +220,6 @@
  ],
  "quick_entry": 1,
  "read_only": 0,
- "read_only_onload": 0,
  "show_name_in_global_search": 0,
  "sort_field": "modified",
  "sort_order": "ASC",
