--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^4.3.1",
     "cookie": "^0.3.1",
     "express": "^4.16.2",
+    "fast-deep-equal": "^2.0.1",
     "frappe-datatable": "^1.10.0",
     "frappe-gantt": "^0.1.0",
     "fuse.js": "^3.2.0",
